--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>站点防丢失</title>
-    <link rel="icon" href="./assets/img/favicon.svg">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" href="./img/favicon.svg">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="main">
