--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                         <div class="card-container">
                             <div>博客主页：<a href="https://www.mnxy.eu.org">https://www.mnxy.eu.org</a></div>
                             <div>博客主站：<a href="https://blog.mnxy.eu.org">https://blog.mnxy.eu.org</a></div>
-                            <div>博客主站备用：<a href="https://blog.mnxiaoyao.eu.org">https://blog.mnxiaoyao.eu.org</a></div>
+                            <div>博客主站备用1：<a href="https://blog.mnxiaoyao.eu.org">https://blognew.mnxy.eu.org</a></div>
+                            <div>博客主站备用2：<a href="https://blog.mnxiaoyao.eu.org">https://blog.mengnian.eu.org</a></div>
                             <div>博客旧站点：<a href="https://blogold.mnxy.eu.org">https://blogold.mnxy.eu.org</a></div>
                         </div>
                     </div>
