--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
     <div class="footer">
-        Copyright ©&nbsp;2022-2023&nbsp;&nbsp;By&nbsp;<a href="https://www.mnxy.eu.org">梦念逍遥</a>
+        Copyright ©&nbsp;2022-现在&nbsp;&nbsp;By&nbsp;<a href="https://www.mnxy.eu.org">梦念逍遥</a>
     </div>
 </body>
 </html>
