--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                         <div class="card-container">
                             <div>博客主页：<a href="https://www.mnxy.eu.org">https://www.mnxy.eu.org</a></div>
                             <div>博客主站：<a href="https://blog.mnxy.eu.org">https://blog.mnxy.eu.org</a></div>
+                            <div>博客主站 国内线路：<a href="https://blog.mengnianxy.eu.org">https://blog.mengnianxy.eu.org</a></div>
                             <div>博客主站 Cloudflare 节点：<a href="https://blog-cf.mnxy.eu.org">https://blog-cf.mnxy.eu.org</a></div>
                             <div>博客主站 Netlify 节点：<a href="https://blog-nl.mnxy.eu.org">https://blog-nl.mnxy.eu.org</a></div>
-                            <div>博客主站 Vercel 节点：<a href="https://blog-vc.mnxy.eu.org">https://blog-vc.mnxy.eu.org</a></div>
                             <div>博客旧站点：<a href="https://blogold.mnxy.eu.org">https://blogold.mnxy.eu.org</a></div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="card-body">
                         <div class="card-container">
-                            <div>网址集：<a href="https://nav.mnxy.eu.org">https://nav.mnxy.eu.org</a></div>
+                            <div>站点监测：<a href="https://status.mnxy.eu.org">https://status.mnxy.eu.org</a></div>
                             <div>订阅转换：<a href="https://subweb.mnxy.eu.org">https://subweb.mnxy.eu.org</a></div>
                             <div>音乐转换-1：<a href="https://unlockmusic.mnxy.eu.org">https://unlockmusic.mnxy.eu.org</a></div>
                             <div>音乐转换-2：<a href="https://unlockmusic-react.mnxy.eu.org">https://unlockmusic-react.mnxy.eu.org</a></div>
