--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                     <div class="card-body">
                         <div class="card-container">
                             <div>博客主页：<a href="https://www.mnxy.eu.org">https://www.mnxy.eu.org</a></div>
-                            <div>博客主站：<a href="https://blog.mnxy.eu.org">https://blog.mnxy.eu.org</a></div>
-                            <div>博客主站 国内线路：<a href="https://blog.mengnianxy.eu.org">https://blog.mengnianxy.eu.org</a></div>
-                            <div>博客旧站点：<a href="https://blogold.mnxy.eu.org">https://blogold.mnxy.eu.org</a></div>
+                            <div>博客(全线路解析)：<a href="https://blog.mnxy.eu.org">https://blog.mnxy.eu.org</a></div>
                         </div>
                     </div>
                 </div>
