--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="card-body">
                         <div class="card-container">
                             <div>博客主页：<a href="https://www.mnxy.eu.org">https://www.mnxy.eu.org</a></div>
-                            <div>博客(全线路解析)：<a href="https://blog.mnxy.eu.org">https://blog.mnxy.eu.org</a></div>
+                            <div>博客：<a href="https://blog.mnxy.eu.org">https://blog.mnxy.eu.org</a></div>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,6 @@
                     <div class="card-body">
                         <div class="card-container">
                             <div>站点监测：<a href="https://status.mnxy.eu.org">https://status.mnxy.eu.org</a></div>
-                            <div>订阅转换：<a href="https://subweb.mnxy.eu.org">https://subweb.mnxy.eu.org</a></div>
                             <div>音乐转换-1：<a href="https://unlockmusic.mnxy.eu.org">https://unlockmusic.mnxy.eu.org</a></div>
                             <div>音乐转换-2：<a href="https://unlockmusic-react.mnxy.eu.org">https://unlockmusic-react.mnxy.eu.org</a></div>
                         </div>
